--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,5 +1,5 @@
 FROM nvidia/cuda:9.0-cudnn7-runtime-ubuntu16.04
-
+USER root
 RUN apt-get update \
         && apt-get install -y --no-install-recommends \
                curl \
